Finish first page

--- a/projetoIndividual/contatos.html
+++ b/projetoIndividual/contatos.html
@@ -14,7 +14,7 @@
                 <div id="nome">
                     <h1>Leonardo Santos</h1>
                 </div>
-                <ul id="menu">
+                <ul class="menu">
                     <li class="abasMenu" id="home"><a href="./index.html">Home</a></li>
                     <li class="abasMenu" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
                     <li class="abasMenu" id="contatos"><a href="./contatos.html">Contatos</a></li>
@@ -29,7 +29,8 @@
         </div>
         <div id="osContatos">
             <!-- Utilizando "mailto:email" para dizer ao navegador que este é um link de um email"  -->
-            <div id="bordaContatos" class="meusContatos">
+            <div class="margim"></div>
+            <div class="meusContatos">
                 <h5>Email: <a href="mailto:leonnarddo15@gmail.com">Leonnarddo15@gmail.com</a></h5>
             </div>
             <!-- Chamando o site do whatsapp para abrir conversa comigo e
