--- a/projetoIndividual/index.html
+++ b/projetoIndividual/index.html
@@ -14,7 +14,7 @@
                 <div id="nome">
                     <h1>Leonardo Santos</h1>
                 </div>
-                <ul id="menu">
+                <ul class="menu">
                     <li class="abasMenu" id="home"><a href="./index.html">Home</a></li>
                     <li class="abasMenu" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
                     <li class="abasMenu" id="contatos"><a href="./contatos.html">Contatos</a></li>
@@ -23,14 +23,33 @@
         </nav>
     </header>
 
-    <mai>
-        <div>
+    <main>
+        <section class="midPage">
+            <div>
+                <img id="imgHome" src="./assets/img/imgHome.jpg"  alt="minhaFoto">
+            </div>
+            <div>
+                <ul class="menu">
+                    <li class="abasMenu">26 anos</li>
+                    <li class="abasMenu" id="sobreMim">Niterói-Rj</li>
+                    <li class="abasMenu">Carioca da Gema</li>
+                </ul>
+            </div>
+            <div>
+                <div class="margim"></div>
+                <div id="paragrafosHome">
+                    <p>Oi! Meu nome é Leonardo. Atualmente sou um Dev em desenvolvimento que tem como objetivo principal atuar com excelêcia a profissão de
+                        Dev Learning (Área para qual estou me preparando agora), e seus cargos subsequentes.</p>
+                    <p>Sou apaixonado por games e tudo o que envola esse nicho</p>
+                    <p>Gosto de fazer trilhas; o cheiro do mato me trás paz e ajuda a me conectar comigo mesmo.</p>
+                    <p>Também sou pai de pets, tenho dois gatos e uma cadelinha, ambos maravilhosos e com um caráter único</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
-
-        </div>
-
-    </mai>
-
-    <Footer></Footer>
+    <Footer>
+        &copy; Leonardo Santos Costa, 2022-2023 Todos os Direitos Reservados
+    </Footer>
 </body>
 </html>
