--- a/projetoIndividual/sobre.html
+++ b/projetoIndividual/sobre.html
@@ -14,7 +14,7 @@
                 <div id="nome">
                     <h1>Leonardo Santos</h1>
                 </div>
-                <ul id="menu">
+                <ul class="menu">
                     <li class="abasMenu" id="home"><a href="./index.html">Home</a></li>
                     <li class="abasMenu" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
                     <li class="abasMenu" id="contatos"><a href="./contatos.html">Contatos</a></li>
