--- a/projetoIndividual/sobre.html
+++ b/projetoIndividual/sobre.html
@@ -4,23 +4,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/jpg" href="./assets/icons/icon.svg" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mim</title>
 </head>
 <body>
     <header>
         <nav>
+            <!-- Menu padrao -->
             <div id="all">
                 <div id="nome">
                     <h1>Leonardo Santos</h1>
                 </div>
                 <ul class="menu">
-                    <li class="abasMenu" id="home"><a href="./index.html">Home</a></li>
-                    <li class="abasMenu" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
-                    <li class="abasMenu" id="contatos"><a href="./contatos.html">Contatos</a></li>
+                    <li class="abasMenu menuTop" id="home"><a href="./index.html">Home</a></li>
+                    <li class="abasMenu menuTop" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
+                    <li class="abasMenu menuTop" id="contatos"><a href="./contatos.html">Contatos</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+    <main>
+        <!-- Separando toda parte de contudo da pagina -->
+        <section class="midPage">
+            <!-- Criei duas box para organizar as div com os conteudo uma abaixo da outra
+            de modo que cada "linha" contenha tres div -->
+            <div class="box">
+                <div class="conteudo">
+                    <img src="./assets/img/familia.jpg" alt="familia">
+                    <p>
+                        Sou apaixonado por minha família, pois eles são a base e o motivo de eu estar aqui.
+                        Moro numa casa com 4 pessoas, minha mãe, meu irmão mais novo e meu primo (que considero meu irmão mais velho, já que ele está na família antes mesmo de eu chegar).
+                        Cheguei até aqui graças a sabedoria de minha mãe, a mulher mais incrível que já conheci, e ao apoio que tive de meus irmãos.
+                        Essa é a minha base da qual eu tenho muito orgulho.
+                    </p>
+                </div>
+                <div class="conteudo" id="conteudoMeio">
+                    <img src="./assets/img/trilha.jpg" alt="trilha">
+                    <p>
+                        Esta é a trilha da Pedra Bonita, fica no Rio de Janeiro e é uma das trilhas mais bonitas que fiz.
+                         Gosto muito de fazer trilha, me identifico muito com a natureza como um todo. 
+                         Estar em contato com ela me traz paz e me ajuda a alinhar os pensamentos quando estão muito confusos e difíceis de organizar. 
+                        Também dá pra tirar fotos muito boas e é sempre uma boa opção para sair com amigos, família e afins. 
+                    </p>
+                </div>
+                <div class="conteudo">
+                    <img src="./assets/img/manhoso.jpg" alt="gatoManhoso">
+                    <p>
+                        Este é Manhoso, o nome já fala muito sobre ele. Minha mãe encontrou ele em uma situação muito complicada,
+                         estava sem se alimentar e extremamente fraco, ao ponto de não conseguir andar sobre quatro patas, 
+                         usava apenas as patas da frente para se locomover, chegamos a pensar que tinha algum problema nas patas de trás mas em apenas 
+                         dois dias descansando e se alimentando voltou a andar normalmente pela casa chorando o tempo inteiro querendo leite. 
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="conteudo">
+                    <img src="./assets/img/bolinha.jpg" alt="gatoBolinha">
+                    <p>
+                        Bolinha é a anciã da casa, vive conosco há 16 anos e já passou por duas cirurgias para remover alguns nódulos que surgiram em suas mamas. 
+                        A mãe dela deu cria em nosso quintal e depois sumiu, então criamos Bolinha desde bem filhote, 
+                        cheguei ao ponto de ter que mastigar alguns alimentos para ela comer durante o período de formação dos dentes dela, 
+                        sempre gostou de comer muito e só parava depois de estar igual uma bolinha (literalmente).
+                    </p>
+                </div>
+                <div class="conteudo" id="conteudoMeio">
+                    <img src="./assets/img/milla.jpg" alt="dogMilla">
+                    <p>
+                        Esta é Milla, a mais ciumenta do rolê. Minha mãe adotou ela por meio de uma amiga da família e desde filhote ela vive conosco. 
+                        Milla é um animal extremamente ciumento, ninguém pode nem se quer abraçar algum membro da família na frente dela que a mesma já fica nervosa. 
+                        Ela tem um espírito muito protetor mas que sempre entra em conflito com o seu espírito preguiçoso.
+                    </p>
+                </div>
+                <div class="conteudo">
+                    <img src="./assets/img/imgEu.jpg" alt="dogMilla">
+                    <p>
+                        Sou muito fã de jogos em geral e este é o meu game favorito, 
+                        sou fã de toda a franquinha de jogos do Monster Hunter, mas o Word me ganhou por ser um game sem igual, cada caçada nesse game é única, 
+                        uma história muito boa e com uma progressão muito gostosa. Esse é de longe o jogo que mais joguei, nem o Lolzinho ganha desse jogo aí.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <Footer>
+        &copy; Leonardo Santos Costa, 2022-2023 Todos os Direitos Reservados
+    </Footer>
 </body>
 </html>
