--- a/projetoIndividual/sobre.html
+++ b/projetoIndividual/sobre.html
@@ -64,7 +64,6 @@
                     <p>
                         Bolinha é a anciã da casa, vive conosco há 16 anos e já passou por duas cirurgias para remover alguns nódulos que surgiram em suas mamas. 
                         A mãe dela deu cria em nosso quintal e depois sumiu, então criamos Bolinha desde bem filhote, 
-                        cheguei ao ponto de ter que mastigar alguns alimentos para ela comer durante o período de formação dos dentes dela, 
                         sempre gostou de comer muito e só parava depois de estar igual uma bolinha (literalmente).
                     </p>
                 </div>
@@ -77,11 +76,11 @@
                     </p>
                 </div>
                 <div class="conteudo">
-                    <img src="./assets/img/imgEu.jpg" alt="dogMilla">
+                    <img src="./assets/img/monsterHunter.png" alt="dogMilla">
                     <p>
                         Sou muito fã de jogos em geral e este é o meu game favorito, 
-                        sou fã de toda a franquinha de jogos do Monster Hunter, mas o Word me ganhou por ser um game sem igual, cada caçada nesse game é única, 
-                        uma história muito boa e com uma progressão muito gostosa. Esse é de longe o jogo que mais joguei, nem o Lolzinho ganha desse jogo aí.
+                        sou fã de toda a franquia de jogos do Monster Hunter, mas o Word me ganhou por ser um game sem igual. Cada caçada nesse game é única, 
+                        uma história muito boa e com uma progressão muito gostosa. Esse é de longe o jogo que mais joguei.
                     </p>
                 </div>
             </div>
