--- a/projetoIndividual/index.html
+++ b/projetoIndividual/index.html
@@ -16,7 +16,7 @@
                     <h1>Leonardo Santos</h1>
                 </div>
                 <ul class="menu">
-                    <li class="abasMenu menuTop" id="home"><a href="./index.html">Home</a></li>
+                    <li class="abasMenu menuTop" id="home"><a href="./index.html">Resumo</a></li>
                     <li class="abasMenu menuTop" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
                     <li class="abasMenu menuTop" id="contatos"><a href="./contatos.html">Contatos</a></li>
                 </ul>
@@ -44,9 +44,9 @@
                 <div id="paragrafosHome">
                     <p>Oi! Meu nome é Leonardo. Atualmente sou um Dev em desenvolvimento que tem como objetivo principal atuar com excelêcia a profissão de
                         Dev Learning (Área para qual estou me preparando agora), e seus cargos subsequentes.</p>
-                    <p>Sou apaixonado por games e tudo o que envola esse nicho</p>
-                    <p>Gosto de fazer trilhas; o cheiro do mato me trás paz e ajuda a me conectar comigo mesmo.</p>
-                    <p>Também sou pai de pets, tenho dois gatos e uma cadelinha, ambos maravilhosos e com um caráter único</p>
+                    <p>Sou apaixonado por games e tudo o que envola esse nicho.</p>
+                    <p>Gosto de fazer trilhas e estar em contato com a natureza.</p>
+                    <p>Também sou pai de pets, tenho dois gatos e uma cadelinha, ambos maravilhosos e com um caráter único.</p>
                 </div>
             </div>
         </section>
