--- a/projetoIndividual/sobre.html
+++ b/projetoIndividual/sobre.html
@@ -17,7 +17,7 @@
                     <h1>Leonardo Santos</h1>
                 </div>
                 <ul class="menu">
-                    <li class="abasMenu menuTop" id="home"><a href="./index.html">Home</a></li>
+                    <li class="abasMenu menuTop" id="home"><a href="./index.html">Resumo</a></li>
                     <li class="abasMenu menuTop" id="sobreMim"><a href="./sobre.html">Sobre Mim</a></li>
                     <li class="abasMenu menuTop" id="contatos"><a href="./contatos.html">Contatos</a></li>
                 </ul>
